syntax = "proto3";
option java_multiple_files = true;
option java_package = "org.interledger.spsp.server.grpc";
package org.interledger.stream.proto;

// Defines the fields that are returned after a SendPayment RPC has completed.
// Next field: 4
message GetPaymentResponse {

    // Unique ID (UUID) of the payment
    string payment_id = 1;

    // Account ID of the sender
    string sender_account_id = 2;

    // The original amount that was requested to be sent.
    uint64 original_amount = 3;

    // The actual amount, in the receivers units, that was delivered to the receiver
    uint64 amount_delivered = 4;

    // The actual amount, in the senders units, that was sent to the receiver
    uint64 amount_sent = 5;

    // Amount left to send in the STREAM payment
    uint64 amount_left_to_send = 6;

    // PaymentPointer of the receiver
    string destination = 7;

    // Indicates if the payment was completed successfully.
    string status = 8;

    // TODO : include all other meta-data from SendPaymentResult
}
